--- a/Kotlin/ClickerGame/app/build.gradle
+++ b/Kotlin/ClickerGame/app/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     testImplementation 'junit:junit:4.13.2'
