--- a/Java/FirebaseRecyclerview/app/build.gradle
+++ b/Java/FirebaseRecyclerview/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     testImplementation 'junit:junit:4.13.2'
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    implementation('com.google.firebase:firebase-database-ktx:20.0.5')
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
