--- a/Java/FirebaseRecyclerview/app/src/main/AndroidManifest.xml
+++ b/Java/FirebaseRecyclerview/app/src/main/AndroidManifest.xml
@@ -3,11 +3,11 @@
     package="com.example.firebaserecyclerview">
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/firebaseicon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FirebaseRecyclerview">
+        android:theme="@style/Theme.Design.Light.NoActionBar">
         <activity
             android:name=".MainActivity"
             android:exported="true">
