--- a/Kotlin/Memo/app/build.gradle
+++ b/Kotlin/Memo/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+apply plugin:'kotlin-kapt'
+
 android {
     compileSdk 32
 
@@ -32,6 +34,10 @@ android {
 }
 
 dependencies {
+    def room_version = "2.4.2"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
