--- a/Kotlin/Memo/app/build.gradle
+++ b/Kotlin/Memo/app/build.gradle
@@ -39,6 +39,7 @@ android {
 dependencies {
     def room_version = "2.4.2"
 
+    //noinspection GradleDependency
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
