--- a/Java/GithubApiSample/app/src/main/AndroidManifest.xml
+++ b/Java/GithubApiSample/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.GithubApiSample"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.UserListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
