--- a/Kotlin/KoinPractice/app/build.gradle
+++ b/Kotlin/KoinPractice/app/build.gradle
@@ -34,8 +34,11 @@ android {
 
 dependencies {
 
+    // Koin
     implementation 'io.insert-koin:koin-core:3.1.2'
     implementation 'io.insert-koin:koin-android:3.1.2'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
